<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".child_profile.Full_child_profile">



    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/details_Linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/details"
                    android:textAllCaps="false"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/_19sdp" />

                <Button
                    android:id="@+id/edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_150sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_gravity="right|end"
                    android:background="@drawable/child_btn_bg"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_Linear"
                android:orientation="horizontal"

                android:layout_marginTop="@dimen/_10sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/childProfilePicDetails"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:background="@color/tab2_color"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:scaleType="fitStart"
                    android:src="@mipmap/large_logo"
                    app:riv_corner_radius="@dimen/_30sdp"
                    app:riv_mutate_background="true"
                    app:riv_oval="true"
                    app:riv_tile_mode="clamp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/parent_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_21sdp"
                        android:textColor="@color/black"
                        android:text="@string/adele" />

                    <LinearLayout
                        android:id="@+id/baby_birth"
                        android:layout_width="@dimen/_215sdp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/born_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:textColor="@color/black"
                            android:text="@string/born"
                            android:textSize="@dimen/_15sdp" />

                        <TextView
                            android:id="@+id/born_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:textColor="@color/light_purple"
                            android:paddingLeft="@dimen/_6sdp"
                            android:textSize="@dimen/_15sdp"
                            android:text="@string/born_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/baby_born"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/baby_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp"
                            android:text="@string/baby" />

                        <TextView
                            android:id="@+id/gender_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:paddingLeft="@dimen/_6sdp"
                            android:text="@string/baby_gen"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold"
                            android:typeface="normal" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/graph_linearLayout"
                android:layout_below="@id/profile_linearLayout"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:padding="@dimen/_8sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sleep_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sleeping_his"
                    android:textAllCaps="false"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/_17sdp"
                     />

                <Button
                    android:id="@+id/see_graph_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/child_btn_bg"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:text="@string/see_graph"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="@dimen/_11sdp"
                    />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/child_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/graph_linearLayout"
                android:layout_marginStart="@dimen/_10sdp"
              android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_8sdp"
                />



        </RelativeLayout>


    </ScrollView>




</android.support.constraint.ConstraintLayout>