<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".forgot_pwd.Reset_password">

    <include
        android:id="@+id/toolbar_reset"
        layout="@layout/toolbar"
      />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_msg"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/reset_bg" />

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_220sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/layout_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_msg"
        app:layout_constraintVertical_bias="0.72">

        <TextView
            android:id="@+id/new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="@string/new_pwd"
            android:textColor="@color/light_purple"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/new_pwd_txt"
            android:layout_width="@dimen/_215sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_52sdp"
            android:background="@drawable/button_with_border"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/sym_pwd"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/conf_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_79sdp"
            android:text="@string/con_pwd"
            android:textColor="@color/light_purple"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/conf_pwd_txt"
            android:layout_width="@dimen/_215sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_19sdp"
            android:background="@drawable/button_with_border"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/sym_pwd"
            android:inputType="textPersonName" />
    </RelativeLayout>


    <Button
        android:id="@+id/submit_pwd"
        android:layout_width="@dimen/_215sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/button_backgrond"
        android:text="@string/otp_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6"
        app:layout_constraintVertical_bias="0.703" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="38dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="37dp" />

    <TextView
        android:id="@+id/success_msg"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/light_pink"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/_15sdp"
        android:text="@string/pwd_chng_msg"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="516dp" />

</android.support.constraint.ConstraintLayout>